--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'emoji-er'
-version '1.0'
+version 'v1.0 - em prj'
 
 
 mainClassName = 'BOT'
@@ -33,8 +33,6 @@ compileJava.options.encoding = 'UTF-8'
 
 task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
-
-
 
 task copyToLib(type: Copy) {
     into "$buildDir/lib"
