--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,12 @@ dependencies {
     compile "net.dv8tion:JDA:$jdaVersion"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile 'postgresql:postgresql:9.1-901-1.jdbc4'
+
+    compile group:'org.fusesource.jansi', name:'jansi', version:'1.17'
 }
 
 compileJava.options.encoding = 'UTF-8'
