--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 }
 
 dependencies {
-    compile "net.dv8tion:JDA:$jdaVersion"
+    compile 'net.dv8tion:JDA:' + jdaVersion
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
